# HTodo

./: .gitignore  README.md  stack.yaml
htodo/: htodo.cabal  todos.txt
htodo/app/: Main.hs
htodo/src/: Args.hs  Interactive.hs  Store.hs
