name:                htodo
version:             0.1.0
description:         Todo application for the CLI with sharing capabilities
homepage:            https://github.com/Wildhoney/HTodo#readme
license:             MIT
license-file:        LICENSE
author:              Adam Timberlake
maintainer:          adam.timberlake@gmail.com
copyright:           2016 Adam Timberlake
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Interactive, Store
  build-depends:       base >= 4.7 && < 5,
                       transformers
  default-language:    Haskell2010

executable htodo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , htodo
  default-language:    Haskell2010

test-suite htodo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , htodo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Wildhoney/HTodo
